--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "FarmersStore",
   "main": "index.js",
   "scripts": {
-    "start":"node app.js"
+    "start":"echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
